k8s/platform/longhorn/base/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-redirect
  namespace: longhorn-system
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: http
  hostnames:
    - "longhorn.${DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  hostnames:
    - "longhorn.${DOMAIN}"
  rules:
    - backendRefs:
      - name: longhorn-frontend
        port: 80
